--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -84,7 +84,7 @@
                                             </button>
                                         </div>
     
-                                        <input class="form-control qty_input text-center" type="number" name="quantity" value="{{ item.quantity }}"
+                                        <input class="form-control qty_input text-center border-purple rounded-lg" type="number" name="quantity" value="{{ item.quantity }}"
                                             min="1" max="99" data-item_id="{{ item.item_id }}"
                                             id="id_qty_{{ item.item_id }}">
     
