--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,6 +2,8 @@ html {
     height: 100%;
 }
 
+
+/* Link to google font used https://fonts.google.com/specimen/Urbanist */
 body {
     font-family: "Urbanist", Arial, Helvetica, sans-serif;
     background: white;
@@ -10,15 +12,93 @@ body {
 }
 
 
+.main-logo-link {
+    width: fit-content;
+}
+
+
 .chocelegance-logo-text {
     font-size: 3.1rem;
 }
 
+#base-header{
+    width: 72% !important;
+    padding: 0 !important;
+}
+
+
+#main-nav {
+    margin-top: 1rem;
+}
+
+.navbar-nav > li {
+    margin-right: 5rem !important;
+}
+
+/* Styles placeholder text shown in search bar */
+input[name='q']::placeholder {
+    color: #551b8c;
+    opacity: .6;
+}
+
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
+}
+
+
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------ Heart Logo Styling */
+
+.logo-heart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #c71585;
+    text-shadow: 0 0px 2px #ed82ed;
+    margin-left: 1rem;
+    padding-top: .2rem;
+    animation: heartFadeIn ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+/* 
+Fade in animation was adapted from 
+https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/
+*/
+
+@keyframes heartFadeIn {
+    0% {
+        transform: scale(.7);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(2.5);
+        opacity: 1;
+    }
+}
+
+
+
+
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------ Text, Border & Background Styling */
+
+/* Custom color of text used throughout site */
 .purple-text {
     color: #551b8c !important;
 }
 
-
+/* Changes color of purple text on hover, used in main menu headings */
 .purple-text-transition {
     color: #551b8c !important;
     transition: all 0.2s ease-in-out;
@@ -31,20 +111,39 @@ body {
     text-shadow: rgba(237,130,237,0.9) 0px 0px 1px !important;
 }
 
+.border-purple {
+    border: 1px solid #551b8c !important;
+}
 
-
-
-/* Used when the grand total of the cart if greater than 0 */
-.active-cart {
-    color: #c71585 !important;
+.bg-purple {
+    background: #551b8c !important
 }
 
 
-#base-header{
-    width: 72% !important;
-    padding: 0 !important;
+
+/* ------------------------------------------------------------------------------------------------------------------------------ Free Delivery Banner Styling */
+
+#delivery-banner {
+    border-radius: 10px;
+    /* Background gradient effect generated from cssgradient.io */
+    background: rgb(85,27,140);
+    background: -moz-linear-gradient(153deg, rgba(85,27,140,1) 11%, rgba(136,43,222,1) 36%, rgba(136,43,222,1) 64%, rgba(237,130,237,1) 100%);
+    background: -webkit-linear-gradient(153deg, rgba(85,27,140,1) 11%, rgba(136,43,222,1) 36%, rgba(136,43,222,1) 64%, rgba(237,130,237,1) 100%);
+    background: linear-gradient(153deg, rgba(85,27,140,1) 11%, rgba(136,43,222,1) 36%, rgba(136,43,222,1) 64%, rgba(237,130,237,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#551b8c",endColorstr="#ed82ed",GradientType=1); 
+    padding-top: .2rem;
+    padding-bottom: .2rem;
+    font-weight: 100;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 1px solid #551b8c;
 }
 
+
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------ Hero Image Styling */
 
 /* Hero image adapted from W3Schools */
 #hero-image-container {
@@ -94,6 +193,8 @@ body {
 
 
 
+/* ------------------------------------------------------------------------------------------------------------------------------ Button Styling */
+
 /* The glow effect for the shop button below was adapted from code by codepen user Kanishk Kunal 
 link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 
@@ -126,23 +227,6 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 }
 
 
-
-
-/* from Bulma, used to ensure consistent styling of icons (centering etc) */
-.icon {
-    align-items: center;
-    display: inline-flex;
-    justify-content: center;
-    height: 1.5rem;
-    width: 1.5rem;
-}
-
-
-.main-logo-link {
-    width: fit-content;
-}
-
-
 /* Purple button styling to ensure consistency */
 .btn-purple {
     background: #551b8c;
@@ -163,163 +247,6 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
     box-shadow: 0 0px 10px #ed82ed;
     border: 1px solid #ed82ed
 }
-
-
-
-/* Text styling  */
-
-.border-purple {
-    border: 1px solid #551b8c !important;
-}
-
-.bg-purple {
-    background: #551b8c !important
-}
-
-
-.overlay {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: white;
-    z-index: -1;
-}
-
-/* Used to create a container for the chocolate image in chocolates.html */
-.choc-image-container {
-    margin-top: 1.5rem !important;
-    height: auto;
-    width: auto;
-    max-width: 28rem;
-    border-radius: 15px;
-    overflow: hidden;
-    box-shadow: 0 0px 10px #ed82ed;
-    border: 1px solid #ed82ed;
-}
-
-.choc-image-container:hover {
-    animation: ShadowFadeIn ease-in-out .3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
-
-/* 
-Fade in animation was adapted from 
-https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/
-*/
-
-@keyframes ShadowFadeIn {
-0% {
-    box-shadow: 0 0px 10px #ed82ed;
-}
-100% {
-    box-shadow: 0 0px 25px #ed82ed;
-}
-}
-
-
-
-
-/* Used to create a container for the chocolate image in chocolate_detail.html */
-.choc-image-container-detail {
-    height: auto;
-    width: auto;
-    max-width: 28rem;
-    border-radius: 15px;
-    overflow: hidden;
-    box-shadow: 0 0px 10px #ed82ed;
-    border: 1px solid #ed82ed;
-}
-
-/* Used to create a container for the chocolate image in cart.html */
-.choc-image-container-cart {
-    height: auto;
-    width: auto;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 15rem;
-    border-radius: 15px;
-    overflow: hidden;
-    box-shadow: 0 0px 10px #ed82ed;
-    border: 1px solid #ed82ed;
-}
-
-
-
-/* ----------------------------------------- Styling for the heart symbol in the Chocelegance logo -------------------------- */
-.logo-heart {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #c71585;
-    text-shadow: 0 0px 2px #ed82ed;
-    margin-left: 1rem;
-    padding-top: .2rem;
-    animation: heartFadeIn ease 1s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
-
-/* 
-Fade in animation was adapted from 
-https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/
-*/
-
-@keyframes heartFadeIn {
-    0% {
-        transform: scale(.7);
-        opacity: 0;
-    }
-    100% {
-        transform: scale(2.5);
-        opacity: 1;
-    }
-}
-
-
-
-/* Used to create a container for the chocolate image in chocolates.html */
-#cart-quantity-col{
-    width: 15rem !important;
-    padding-right: 3rem !important;
-}
-
-
-
-/*------------------------------------------------------- Free Delivery banner --------------------------------------*/
-#delivery-banner {
-    border-radius: 10px;
-    /* Background gradient effect generated from cssgradient.io */
-    background: rgb(85,27,140);
-    background: -moz-linear-gradient(153deg, rgba(85,27,140,1) 11%, rgba(136,43,222,1) 36%, rgba(136,43,222,1) 64%, rgba(237,130,237,1) 100%);
-    background: -webkit-linear-gradient(153deg, rgba(85,27,140,1) 11%, rgba(136,43,222,1) 36%, rgba(136,43,222,1) 64%, rgba(237,130,237,1) 100%);
-    background: linear-gradient(153deg, rgba(85,27,140,1) 11%, rgba(136,43,222,1) 36%, rgba(136,43,222,1) 64%, rgba(237,130,237,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#551b8c",endColorstr="#ed82ed",GradientType=1); 
-    padding-top: .2rem;
-    padding-bottom: .2rem;
-    font-weight: 100;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    border: 1px solid #551b8c;
-}
-
-#main-nav {
-    margin-top: 1rem;
-}
-
-.navbar-nav > li {
-    margin-right: 5rem !important;
-}
-
-/* Styles placeholder text shown in search bar */
-input[name='q']::placeholder {
-    color: #551b8c;
-    opacity: .6;
-}
-
 
 /* Badge is used when displaying chocolates from multiple categories 
 (e.g All Keto Chocolates, badges will be shown for Dark, Milk and White chocolates) */
@@ -431,19 +358,101 @@ a.category-badge > span.badge:hover {
 }
 
 
+/* ------------------------------------------------------------------------------------------------------------------------------ Icon Styling */
 
-/* -------------------------------------- Stlying for Toast messages -------------------------------------------*/
+/* from Bulma, used to ensure consistent styling of icons (centering etc) */
+.icon {
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    height: 1.5rem;
+    width: 1.5rem;
+}
+
+
+/* Used when the grand total of the cart if greater than 0 */
+.active-cart {
+    color: #c71585 !important;
+}
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------ Chocolate Images/Container Styling */
+
+/* Used to create a container for the chocolate image in chocolates.html */
+.choc-image-container {
+    margin-top: 1.5rem !important;
+    height: auto;
+    width: auto;
+    max-width: 28rem;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed;
+}
+
+.choc-image-container:hover {
+    animation: ShadowFadeIn ease-in-out .3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+/* 
+Fade in animation was adapted from 
+https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/
+*/
+
+@keyframes ShadowFadeIn {
+0% {
+    box-shadow: 0 0px 10px #ed82ed;
+}
+100% {
+    box-shadow: 0 0px 25px #ed82ed;
+}
+}
+
+
+
+/* Used to create a container for the chocolate image in chocolate_detail.html */
+.choc-image-container-detail {
+    height: auto;
+    width: auto;
+    max-width: 28rem;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed;
+}
+
+/* Used to create a container for the chocolate image in cart.html */
+.choc-image-container-cart {
+    height: auto;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 15rem;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 0px 10px #ed82ed;
+    border: 1px solid #ed82ed;
+}
+
+
+/* Used to create a container for the chocolate image in chocolates.html */
+#cart-quantity-col{
+    width: 15rem !important;
+    padding-right: 3rem !important;
+}
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------ Toast Message Styling */
 
 .message-container {
     position: fixed;
     top: 50px;
     right: 50px;
     z-index: 9999999;
-    
-}
-
-/* Fade in animation was copied directly from https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/ */
-.message-container {
+    /* Fade in animation was copied directly from
+    https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-css/ */
     animation: fadeInAnimation ease 1s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -460,11 +469,12 @@ a.category-badge > span.badge:hover {
 
 .custom-toast {
     overflow: visible;
-    border-radius: 10px;
 }
 
 .toast-capper {
     height: .3rem;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 .toast-header {
@@ -488,6 +498,8 @@ a.category-badge > span.badge:hover {
     background: #882bde;
     color: white;
     border-top: 1px solid #c71585;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .toast-free-delivery {
@@ -495,8 +507,6 @@ a.category-badge > span.badge:hover {
 }
 
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
-
-
 
 .arrow-up {
     width: 0; 
@@ -549,9 +559,6 @@ a.category-badge > span.badge:hover {
     overflow-y: auto; /* Turns overflow into a scrollbar */
 }
 
-
-
-
 .order-confirmation-wrapper {
     border-radius: 10px;
 }
@@ -596,7 +603,7 @@ a.category-badge > span.badge:hover {
 
 
 
-/* -------------------------------------- Media Queries -------------------------------------- */
+/* ------------------------------------------------------------------------------------------------------------------------------ Media Queries */
 
 /* Slightly larger container on xl screens */
 @media (min-width: 1200px) {
