--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,18 +21,36 @@ body {
     font-size: 3.1rem;
 }
 
+/* Container for navbar */
 #base-header{
-    width: 72% !important;
+    width: 98% !important;
     padding: 0 !important;
 }
 
 
-#main-nav {
-    margin-top: 1rem;
+/* #main-nav {
+    margin-top: .3rem;
+} */
+
+.nav-link {
+    padding: .6rem;
+    padding-top: 1.2rem;
+}
+
+.nav-link i {
+    font-size: .9em;
+}
+
+.nav-link p {
+    font-size: .9em;
+}
+
+nav ul {
+    padding-left: .1em;
 }
 
 .navbar-nav > li {
-    margin-right: 5rem !important;
+    margin-right: 3rem !important;
 }
 
 /* Styles placeholder text shown in search bar */
@@ -41,6 +59,9 @@ input[name='q']::placeholder {
     opacity: .6;
 }
 
+.header-container {
+    padding: 4.2rem !important;
+}
 
 .overlay {
     height: 100%;
@@ -127,17 +148,21 @@ https://www.geeksforgeeks.org/how-to-create-fade-in-effect-on-page-load-using-cs
     border-radius: 10px;
     /* Background gradient effect generated from cssgradient.io */
     background: rgb(85,27,140);
-    background: -moz-linear-gradient(153deg, rgba(85,27,140,1) 11%, rgba(136,43,222,1) 36%, rgba(136,43,222,1) 64%, rgba(237,130,237,1) 100%);
-    background: -webkit-linear-gradient(153deg, rgba(85,27,140,1) 11%, rgba(136,43,222,1) 36%, rgba(136,43,222,1) 64%, rgba(237,130,237,1) 100%);
-    background: linear-gradient(153deg, rgba(85,27,140,1) 11%, rgba(136,43,222,1) 36%, rgba(136,43,222,1) 64%, rgba(237,130,237,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#551b8c",endColorstr="#ed82ed",GradientType=1); 
-    padding-top: .2rem;
-    padding-bottom: .2rem;
-    font-weight: 100;
+    background: -moz-linear-gradient(153deg, rgba(85,27,140,1) 34%, rgba(136,43,222,1) 81%);
+    background: -webkit-linear-gradient(153deg, rgba(85,27,140,1) 34%, rgba(136,43,222,1) 81%);
+    background: linear-gradient(153deg, rgba(85,27,140,1) 34%, rgba(136,43,222,1) 81%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#551b8c",endColorstr="#882bde",GradientType=1);  
+    padding-top: .1rem;
+    padding-bottom: .1rem;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     border: 1px solid #551b8c;
+}
+
+#delivery-banner h4 {
+    font-size: 1.2rem;
+    font-weight: 350;
 }
 
 
@@ -218,11 +243,11 @@ link to code is here https://codepen.io/kanishkkunal/pen/obGojO */
 }
 
 #treat-yourself-button a {
-    padding-top: .7rem;
+    padding-top: .8rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     color: white;
     text-decoration: none;
 }
